feat: implementando via localStorage de necessidade de token de login para acessar o index

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -83,7 +83,7 @@
         <p>font-code: <a href="https://github.com/araujo-leo/to-do-list">GitHub</a>
         </p>
     </footer>
-    <script src="scripts/script.js"></script>
+  1<script src="scripts/script.js?v=1.0'    "></script> 
 </body>
 
 </html>
