--- a/frontend/pages/login-sigin.html
+++ b/frontend/pages/login-sigin.html
@@ -61,7 +61,8 @@
         <p>font-code: <a href="https://github.com/araujo-leo/to-do-list">GitHub</a>
         </p>
     </footer>
-    <script src="../scripts/script.js"></script>
+    
+    <script src="../scripts/script.js?v=1.0"></script>
 </body>
 
 </html>
