feat: implementando lougout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,9 @@
     <header class="flex">
         <div class="flex title-box">
             <h1>To do List</h1>
+            <form action="#" id="logout-form">
+                <button type="submit">LOGOUT</button>
+            </form>
         </div>
     </header>
     <main class="flex">
@@ -83,7 +86,7 @@
         <p>font-code: <a href="https://github.com/araujo-leo/to-do-list">GitHub</a>
         </p>
     </footer>
-  1<script src="scripts/script.js?v=1.0'    "></script> 
+  1<script src="scripts/index.js?v=1.0"></script> 
 </body>
 
 </html>
