--- a/frontend/pages/login-sigin.html
+++ b/frontend/pages/login-sigin.html
@@ -62,7 +62,8 @@
         </p>
     </footer>
     
-    <script src="../scripts/script.js?v=1.0"></script>
+    <script src="../scripts/login-sigin.js?v=1.0"></script>
 </body>
+
 
 </html>
