fixing logout function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <header class="flex">
         <div class="flex title-box">
             <h1>To do List</h1>
-            <form action="#" id="logout-form">
+            <form id="logout-form">
                 <button type="submit">LOGOUT</button>
             </form>
         </div>
