style: adicionando style na pagina de registro e login

--- a/frontend/pages/login-sigin.html
+++ b/frontend/pages/login-sigin.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | To do List</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/login-sigin.css">
 </head>
 
 <body>
 
-    <header class="flex"></header>
     <div class="flex title-box">
         <h1>To do List</h1>
     </div>
